@@ -7,6 +7,10 @@ Changes in ogl-es (not yet released - will be merged with trunk at some point)
 --------------------------
 Changes in 1.9 (not yet released)
 
+- Fix bug that ListBox would not allow to 'tab' to the next element (thx @ FlavourBoat for reporting)
+- IGUIEnvironment::getNextElement now public (was only in CGUIEnvironment before).
+- Add an overwrite mode to editbox. Patch provided by Adam(aka kingadami).
+- Add IGUIImages::setDrawBounds/getDrawBounds to allow coding stuff like progress bars.
 - Add IGUIImages::setSourceRect/getSourceRect to allow using only parts of an image (can also be used to mirror and scroll them).
 - Dev-Cpp project file removed (wasn't really supported for some time already)
 - Collada dae-loader now set's the vertex colors (thx @sf17k for report and test-models)
